Publish multiple database IDs in discovery
CoreServerInfo and ReadReplicaInfo now contain set of database IDs.